@@ -1,0 +1,40 @@
+module Gem
+
+  # An Array of the default sources that come with RubyGems.
+  def self.default_sources
+    %w[http://gems.rubyforge.org]
+  end
+
+  # Default home directory path to be used if an alternate value is
+  # not specified in the environment.
+  def self.default_dir
+    if defined? RUBY_FRAMEWORK_VERSION then
+      File.join File.dirname(Config::CONFIG['sitedir']), 'Gems'
+    else
+      File.join(Config::CONFIG['libdir'], 'ruby', 'gems',
+                Config::CONFIG['ruby_version'])
+    end
+  end
+
+  # Default gem path.
+  def self.default_path
+    default_dir
+  end
+
+  # The default directory for binaries
+  def self.default_bindir
+    Config::CONFIG['bindir']
+  end
+
+  # The default system-wide source info cache directory.
+  def self.default_system_source_cache_dir
+    File.join Gem.dir, 'source_cache'
+  end
+
+  # The default user-specific source info cache directory.
+  def self.default_user_source_cache_dir
+    File.join Gem.user_home, '.gem', 'source_cache'
+  end
+
+end
+
